--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="./index.css">
+    <link rel="stylesheet" type="text/css" href="./home.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
@@ -218,7 +218,7 @@
             <p class="green ext"> Let's learn, share & inspire each other with our passion for computer engineering. Sign up now 🤘🏼</p>
             <div class="col-md-7">
                 <h4>Create Account</h4>
-                <form action="file:///C:/Users/Akshat%20Gupta/Desktop/atg/logedin.html">
+                <form action="./logedin.html">
                     <div class="fname">
                         <input type="text" placeholder="First Name" />
                         <input type="text" placeholder="Last Name" />
@@ -260,7 +260,7 @@
             <p class="green ext"> Let's learn, share & inspire each other with our passion for computer engineering. Sign up now 🤘🏼</p>
             <div class="col-md-7">
                 <h4>Sign In</h4>
-                <form action="file:///C:/Users/Akshat%20Gupta/Desktop/atg/logedin.html">
+                <form action="./logedin.html">
                     <input type="email" placeholder="Email" />
                     <div class="pass">
                         <input id="pas" type="password" placeholder="Password" />
