--- a/logedin.html
+++ b/logedin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="./index.css">
+    <link rel="stylesheet" type="text/css" href="./home.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
@@ -331,7 +331,7 @@
 
     <script>
         function logout(){
-            window.location.href = "file:///C:/Users/Akshat%20Gupta/Desktop/atg/index.html?";
+            window.location.href = "./home.html";
         }
         function toggle(object){
             // console.log(object.parentElement.children[1]);
